book: update uk
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/uk/v2/Інструменти-Git-Rerere.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Rerere.html
@@ -82,7 +82,7 @@ Automatic merge failed; fix conflicts and then commit the result.</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Зверніть тут увагу на новий рядок <code>Recorded preimage for FILE</code> (записано предвідбиток для ФАЙЛУ).
+<p>Зверніть тут увагу на новий рядок <code>Recorded preimage for FILE</code> (записано передвідбиток для ФАЙЛУ).
 Решта виглядає так само, як і звичайний конфлікт зливання.
 Наразі, <code>rerere</code> знає декілька речей.
 Зазвичай, ви зараз виконали б <code>git status</code>, щоб побачити всі конфлікти:</p>
