--- a/external/book/content/book/uk/v2/Інструменти-Git-Підмодулі.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Підмодулі.html
@@ -167,7 +167,7 @@ Submodule DbConnector 0000000...c3f01dc (new submodule)</code></pre>
 Це спеціальні права доступу в Git, що означають, що ви записуєте коміт як директорію, а не просто піддиректорію або файл.</p>
 </div>
 <div class="paragraph">
-<p>Lastly, push these changes:</p>
+<p>Наостанок, надішліть ці зміни:</p>
 </div>
 <div class="listingblock">
 <div class="content">
