--- a/external/book/content/book/uk/v2/Основи-Git-Запис-змін-до-репозиторія.html
+++ b/external/book/content/book/uk/v2/Основи-Git-Запис-змін-до-репозиторія.html
@@ -34,7 +34,7 @@ url: "/book/uk/v2/Основи-Git-Запис-змін-до-репозиторі
 </div>
 <div class="paragraph">
 <p>По мірі редагування файлів, Git бачить, що вони змінені, адже ви їх змінили після останнього коміту.
-Впродовж роботи ви вибірково індексуєте ці змінені фали та потім зберігаєте всі індексовані зміни, та цей цикл повторюється.</p>
+Впродовж роботи ви вибірково індексуєте ці змінені файли та потім зберігаєте всі індексовані зміни, та цей цикл повторюється.</p>
 </div>
 <div class="imageblock">
 <div class="content">
