book: update de
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-Sublime-Text.html
+++ b/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-Sublime-Text.html
@@ -31,20 +31,20 @@ url: "/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-Sublime-Text.html"
 <p>In der Seitenleiste wird der Git-Status von Dateien und Ordnern mit einem Abzeichen/Symbol angezeigt.</p>
 </li>
 <li>
-<p>Dateien und Ordner in Ihrer .gitignore-Datei werden in der Seitenleiste ausgeblendet.</p>
+<p>Dateien und Ordner in deiner .gitignore-Datei werden in der Seitenleiste ausgeblendet.</p>
 </li>
 <li>
-<p>In der Statusleiste sehen Sie den aktuellen Git-Branch und wie viele Änderungen Sie vorgenommen haben.</p>
+<p>In der Statusleiste diehst du den aktuellen Git-Branch und wie viele Änderungen du vorgenommen hast.</p>
 </li>
 <li>
 <p>Alle Änderungen an einer Datei sind jetzt über Markierungen in der Seitenleiste sichtbar.</p>
 </li>
 <li>
-<p>Sie können einen Teil der Funktionen des Sublime Merge Git-Clients in Sublime Text verwenden.
+<p>Du kannst einen Teil der Funktionen des Sublime Merge Git-Clients in Sublime Text verwenden.
 Dies setzt voraus, dass Sublime Merge installiert ist. Siehe: <a href="https://www.sublimemerge.com/" class="bare">https://www.sublimemerge.com/</a>.</p>
 <div class="literalblock">
 <div class="content">
-<pre>Die offizielle Dokumentation zu Sublime Text finden Sie hier: https://www.sublimetext.com/docs/3/git_integration.html[].</pre>
+<pre>Die offizielle Dokumentation zu Sublime Text findest du hier: https://www.sublimetext.com/docs/3/git_integration.html[].</pre>
 </div>
 </div>
 </li>
