--- a/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-Bash.html
+++ b/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-Bash.html
@@ -21,13 +21,13 @@ url: "/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-Bash.html"
 <h2 id="_git_in_bash">Git in Bash</h2>
 <div class="paragraph">
 <p>
-Wenn Sie ein Bash-Benutzer sind, können Sie einige der Funktionen Ihrer Shell nutzen, um Ihren Umgang mit Git viel angenehmer zu gestalten.
+Wenn du Bash benutzt, kannst du einige der Funktionen deiner Shell nutzen, um deinen Umgang mit Git viel angenehmer zu gestalten.
 Git wird mit Plugins für mehrere Shells ausgeliefert. Sie sind jedoch nicht standardmäßig aktiviert.</p>
 </div>
 <div class="paragraph">
-<p>Zunächst müssen Sie eine Kopie der Vervollständigungsdatei aus dem Quellcode der von Ihnen verwendeten Git-Version abrufen.
-Überprüfen Sie Ihre Version, indem Sie <code>git version</code> eingeben, und verwenden Sie dann <code>git checkout tags/vX.Y.Z</code>, wobei <code>vX.Y.Z</code> der Version von Git entspricht, die Sie verwenden.
-Kopieren Sie die Datei <code>contrib/completion/git-completion.bash</code> an einen geeigneten Ort, z.B. in Ihr Home-Verzeichnis und fügen Sie folgendes zu Ihrer <code>.bashrc</code> hinzu:</p>
+<p>Zunächst musst du eine Kopie der Vervollständigungsdatei aus dem Quellcode der von dir verwendeten Git-Version abrufen.
+Überprüfe deine Version, indem du <code>git version</code> eingibst. Verwenden dann <code>git checkout tags/vX.Y.Z</code>, wobei <code>vX.Y.Z</code> der Version von Git entspricht, die du aktuell nutzt.
+Kopiere die Datei <code>contrib/completion/git-completion.bash</code> an einen geeigneten Ort, z.B. in deinem Home-Verzeichnis und füge folgendes zu deiner <code>.bashrc</code> hinzu:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -35,7 +35,7 @@ Kopieren Sie die Datei <code>contrib/completion/git-completion.bash</code> an ei
 </div>
 </div>
 <div class="paragraph">
-<p>Wechseln Sie anschließend in ein Git-Repository und geben Sie Folgendes ein:</p>
+<p>Wechsel anschließend in ein Git-Repository und gib Folgendes ein:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -48,8 +48,8 @@ Dies funktioniert mit allen Unterbefehlen, Befehlszeilenparametern sowie Remote 
 </div>
 <div class="paragraph">
 <p>Es ist auch nützlich, die Eingabeaufforderung so anzupassen, dass Informationen zum Git-Repository des aktuellen Verzeichnisses angezeigt werden.
-Dies kann so einfach oder komplex sein, wie Sie möchten. Im Allgemeinen gibt es jedoch einige wichtige Informationen, die die meisten Benutzer benötigen, z. B. den aktuellen Branch und den Status des Arbeitsverzeichnisses.
-Um diese zu Ihrer Eingabeaufforderung hinzuzufügen, kopieren Sie einfach die Datei <code>contrib/completion/git-prompt.sh</code> aus dem Quellrepository von Git in Ihr Home Verzeichnis. Fügen Sie Ihre <code>.bashrc</code> Datei folgendes hinzu:</p>
+Dies kann so einfach oder komplex sein, wie du möchtest. Im Allgemeinen gibt es jedoch einige wichtige Informationen, die die meisten Benutzer benötigen, z.B. den aktuellen Branch und den Status des Arbeitsverzeichnisses.
+Um diese zu deiner Eingabeaufforderung hinzuzufügen, kopiere einfach die Datei <code>contrib/completion/git-prompt.sh</code> aus dem Quellrepository von Git in dein Home Verzeichnis. Füge deiner <code>.bashrc</code> Datei folgendes hinzu:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -60,7 +60,7 @@ export PS1='\w$(__git_ps1 " (%s)")\$ '</code></pre>
 </div>
 <div class="paragraph">
 <p>Das <code>\w</code> bedeutet das Ausgeben des aktuellen Arbeitsverzeichnisses, das <code>\$</code> gibt den  <code>$</code> Teil der Eingabeaufforderung aus und <code>__git_ps1 "(% s)"</code> ruft die von` git-prompt.sh` bereitgestellte Funktion mit einem Formatierungsargument auf.
-Jetzt sieht Ihre Bash-Eingabeaufforderung so aus, wenn Sie sich irgendwo in einem Git Projekt befinden:</p>
+Jetzt sieht deine Bash-Eingabeaufforderung so aus, wenn du dich irgendwo in einem Git Projekt befindest:</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -69,6 +69,6 @@ Jetzt sieht Ihre Bash-Eingabeaufforderung so aus, wenn Sie sich irgendwo in eine
 <div class="title">Abbildung 184. Customized <code>bash</code> prompt</div>
 </div>
 <div class="paragraph">
-<p>Beide Skripte werden mit hilfreicher Dokumentation geliefert. Weitere Informationen finden Sie in den Skripten <code>git-completion.bash</code> und <code>git-prompt.sh</code> selbst.</p>
+<p>Beide Skripte werden mit hilfreicher Dokumentation geliefert. Weitere Informationen findest du in den Skripten <code>git-completion.bash</code> und <code>git-prompt.sh</code> selbst.</p>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
