--- a/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-PowerShell.html
+++ b/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-PowerShell.html
@@ -22,9 +22,9 @@ url: "/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-PowerShell.html"
 <div class="paragraph">
 <p>
 
-Das Legacy-Befehlszeilenterminal unter Windows (<code>cmd.exe</code>) bietet keine Git Integration, aber wenn Sie PowerShell verwenden, haben Sie Glück.
-Dies funktioniert auch, wenn Sie PowerShell Core unter Linux oder macOS ausführen.
-Ein Paket mit dem Namen posh-git (<a href="https://github.com/dahlbyk/posh-git" class="bare" target="_blank" rel="noopener">https://github.com/dahlbyk/posh-git</a>) bietet leistungsstarke Funktionen zur Tab  Vervollständigung sowie eine erweiterte Eingabeaufforderung, mit der Sie den Überblick über Ihren Repository-Status behalten.
+Das Legacy-Befehlszeilenterminal unter Windows (<code>cmd.exe</code>) bietet keine Git Integration, aber wenn du PowerShell verwendest, hast du Glück.
+Dies funktioniert auch, wenn du PowerShell Core unter Linux oder macOS ausführst.
+Ein Paket mit dem Namen posh-git (<a href="https://github.com/dahlbyk/posh-git" class="bare" target="_blank" rel="noopener">https://github.com/dahlbyk/posh-git</a>) bietet leistungsstarke Funktionen zur Tab Vervollständigung sowie eine erweiterte Eingabeaufforderung, mit der du den Überblick über deinen Repository-Status behalten kannst.
 Folgendermaßen sieht es aus:</p>
 </div>
 <div class="imageblock">
@@ -38,11 +38,11 @@ Folgendermaßen sieht es aus:</p>
 <div class="sect4">
 <h4 id="_voraussetzungen_nur_für_windows">Voraussetzungen (Nur für Windows)</h4>
 <div class="paragraph">
-<p>Bevor Sie PowerShell-Skripte auf Ihrem Computer ausführen können, müssen Sie Ihre lokale ExecutionPolicy auf RemoteSigned (im Allgemeinen alles außer Undefiniert und Eingeschränkt) einstellen.
-Wenn Sie AllSigned anstelle von RemoteSigned auswählen, müssen auch lokale Skripte (Ihre eigenen) digital signiert sein, damit sie ausgeführt werden können.
+<p>Bevor du PowerShell-Skripte auf deinen Computer ausführen kannst, musst du deine lokale ExecutionPolicy auf RemoteSigned (im Allgemeinen alles außer Undefiniert und Eingeschränkt) einstellen.
+Wenn du AllSigned anstelle von RemoteSigned auswählst, müssen auch lokale Skripte (deine eigenen) digital signiert sein, damit sie ausgeführt werden können.
 Mit RemoteSigned müssen nur Skripte signiert werden, bei denen „ZoneIdentifier“ auf Internet eingestellt ist (sie wurden aus dem Web heruntergeladen), andere nicht.
-Wenn Sie ein Administrator sind und es für alle Benutzer auf diesem Computer festlegen möchten, verwenden Sie „-Scope LocalMachine“.
-Wenn Sie ein normaler Benutzer ohne Administratorrechte sind, können Sie „-Scope CurrentUser“ verwenden, um es nur für sich selber festzulegen.</p>
+Wenn du ein Administrator bist und es für alle Benutzer auf diesem Computer festlegen möchtest, verwende „-Scope LocalMachine“.
+Wenn du ein normaler Benutzer ohne Administratorrechte bist, kannst du „-Scope CurrentUser“ verwenden, um es nur für dich selber festzulegen.</p>
 </div>
 <div class="paragraph">
 <p>Weitere Informationen zu PowerShell-Bereichen unter: <a href="https://docs.microsoft.com/de-de/powershell/module/microsoft.powershell.core/about/about_scopes" class="bare" target="_blank" rel="noopener">https://docs.microsoft.com/de-de/powershell/module/microsoft.powershell.core/about/about_scopes</a>.</p>
@@ -51,7 +51,7 @@ Wenn Sie ein normaler Benutzer ohne Administratorrechte sind, können Sie „-Sc
 <p>Weitere Informationen zu PowerShell ExecutionPolicy unter: <a href="https://docs.microsoft.com/de-de/powershell/module/microsoft.powershell.security/set-executionpolicy" class="bare" target="_blank" rel="noopener">https://docs.microsoft.com/de-de/powershell/module/microsoft.powershell.security/set-executionpolicy</a>.</p>
 </div>
 <div class="paragraph">
-<p>Um den Wert von <code>ExecutionPolicy</code> für alle Benutzer auf <code>RemoteSigned</code> zu setzen, verwenden Sie den nächsten Befehl:</p>
+<p>Um den Wert von <code>ExecutionPolicy</code> für alle Benutzer auf <code>RemoteSigned</code> zu setzen, verwende den nächsten Befehl:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -62,7 +62,7 @@ Wenn Sie ein normaler Benutzer ohne Administratorrechte sind, können Sie „-Sc
 <div class="sect4">
 <h4 id="_powershell_galerie">PowerShell Galerie</h4>
 <div class="paragraph">
-<p>Wenn Sie mindestens PowerShell 5 oder PowerShell 4 mit PackageManagement installiert haben, können Sie posh-git mithilfe des Paketmanagers installieren.</p>
+<p>Wenn du mindestens PowerShell 5 oder PowerShell 4 mit PackageManagement installiert hast, kannst du posh-git mithilfe des Paketmanagers installieren.</p>
 </div>
 <div class="paragraph">
 <p>Weitere Informationen zur PowerShell-Galerie unter: <a href="https://docs.microsoft.com/de-de/powershell/scripting/gallery/overview" class="bare" target="_blank" rel="noopener">https://docs.microsoft.com/de-de/powershell/scripting/gallery/overview</a>.</p>
@@ -74,8 +74,8 @@ Wenn Sie ein normaler Benutzer ohne Administratorrechte sind, können Sie „-Sc
 </div>
 </div>
 <div class="paragraph">
-<p>Wenn Sie posh-git für alle Benutzer installieren möchten, verwenden Sie stattdessen „-Scope AllUsers“ und führen Sie den Befehl über eine PowerShell-Konsole mit admin Rechten aus.
-Wenn der zweite Befehl fehlschlägt und ein Fehler wie <code>Module 'PowerShellGet' was not installed by using Install-Module</code>, müssen Sie zuerst einen anderen Befehl ausführen:</p>
+<p>Wenn du posh-git für alle Benutzer installieren möchtest, verwende stattdessen „-Scope AllUsers“ und führe den Befehl über eine PowerShell-Konsole mit admin Rechten aus.
+Wenn der zweite Befehl fehlschlägt und ein Fehler wie <code>Module 'PowerShellGet' was not installed by using Install-Module</code> auftritt, musst du zuerst einen anderen Befehl ausführen:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -83,17 +83,17 @@ Wenn der zweite Befehl fehlschlägt und ein Fehler wie <code>Module 'PowerShellG
 </div>
 </div>
 <div class="paragraph">
-<p>Dann können Sie zurückgehen und es erneut versuchen.
+<p>Dann kannst du es erneut versuchen.
 Dies liegt daran, dass die mit Windows PowerShell gelieferten Module mit einem anderen Veröffentlichungszertifikat signiert sind.</p>
 </div>
 </div>
 <div class="sect4">
 <h4 id="_aktualisierung_der_powershell_eingabeaufforderung">Aktualisierung der PowerShell Eingabeaufforderung</h4>
 <div class="paragraph">
-<p>Um Git-Informationen in Ihre Eingabeaufforderung aufzunehmen, muss das Posh-Git-Modul importiert werden.
-Wenn posh-git bei jedem Start von PowerShell importiert werden soll, führen Sie den Befehl Add-PoshGitToProfile aus, mit dem die import-Anweisung in Ihr $profile-Skript eingefügt wird.
-Dieses Skript wird jedes Mal ausgeführt, wenn Sie eine neue PowerShell-Konsole öffnen.
-Beachten Sie, dass es mehrere <code>$profile</code> Skripte gibt.
+<p>Um Git-Informationen in deine Eingabeaufforderung aufzunehmen, muss das Posh-Git-Modul importiert werden.
+Wenn posh-git bei jedem Start von PowerShell importiert werden soll, führe den Befehl Add-PoshGitToProfile aus, mit dem die import-Anweisung in dein $profile-Skript eingefügt wird.
+Dieses Skript wird jedes Mal ausgeführt, wenn du eine neue PowerShell-Konsole öffnest.
+Beachte, dass es mehrere <code>$profile</code> Skripte gibt.
 Z.B. eins für die Konsole und ein separates für die ISE.</p>
 </div>
 <div class="listingblock">
@@ -106,8 +106,8 @@ Z.B. eins für die Konsole und ein separates für die ISE.</p>
 <div class="sect4">
 <h4 id="_vom_quellcode">Vom Quellcode</h4>
 <div class="paragraph">
-<p>Laden Sie einfach eine posh-git-Version von (<a href="https://github.com/dahlbyk/posh-git" class="bare" target="_blank" rel="noopener">https://github.com/dahlbyk/posh-git</a>) herunter und entpacken Sie sie.
-Importieren Sie dann das Modul unter Verwendung des vollständigen Pfads zur Datei posh-git.psd1:</p>
+<p>Lade einfach eine posh-git-Version von (<a href="https://github.com/dahlbyk/posh-git" class="bare" target="_blank" rel="noopener">https://github.com/dahlbyk/posh-git</a>) herunter und entpacke sie.
+Importiere dann das Modul unter Verwendung des vollständigen Pfads zur Datei posh-git.psd1:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -116,11 +116,11 @@ Importieren Sie dann das Modul unter Verwendung des vollständigen Pfads zur Dat
 </div>
 </div>
 <div class="paragraph">
-<p>Dies fügt die richtige Zeile zu Ihrer <code>profile.ps1</code> Datei hinzu und posh-git wird beim nächsten Öffnen von PowerShell aktiviert.</p>
+<p>Dies fügt die richtige Zeile zu deiner <code>profile.ps1</code> Datei hinzu und posh-git wird beim nächsten Öffnen von PowerShell aktiviert.</p>
 </div>
 <div class="paragraph">
-<p>Eine Beschreibung der in der Eingabeaufforderung angezeigten Git-Statuszusammenfassungsinformationen finden Sie unter: <a href="https://github.com/dahlbyk/posh-git/blob/master/README.md#git-status-summary-information" class="bare" target="_blank" rel="noopener">https://github.com/dahlbyk/posh-git/blob/master/README.md#git-status-summary-information</a>
-Weitere Informationen zum Anpassen Ihrer posh-git-Eingabeaufforderung finden Sie unter: <a href="https://github.com/dahlbyk/posh-git/blob/master/README.md#customization-variables" class="bare" target="_blank" rel="noopener">https://github.com/dahlbyk/posh-git/blob/master/README.md#customization-variables</a>.</p>
+<p>Eine Beschreibung der in der Eingabeaufforderung angezeigten Git-Statuszusammenfassungsinformationen findest du unter: <a href="https://github.com/dahlbyk/posh-git/blob/master/README.md#git-status-summary-information" class="bare" target="_blank" rel="noopener">https://github.com/dahlbyk/posh-git/blob/master/README.md#git-status-summary-information</a>
+Weitere Informationen zum Anpassen deiner posh-git-Eingabeaufforderung findest du unter: <a href="https://github.com/dahlbyk/posh-git/blob/master/README.md#customization-variables" class="bare" target="_blank" rel="noopener">https://github.com/dahlbyk/posh-git/blob/master/README.md#customization-variables</a>.</p>
 </div>
 </div>
 </div>
