--- a/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-Visual-Studio-Code.html
+++ b/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-Visual-Studio-Code.html
@@ -21,7 +21,7 @@ url: "/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-Visual-Studio-Code.
 <h2 id="_git_in_visual_studio_code">Git in Visual Studio Code</h2>
 <div class="paragraph">
 <p>In Visual Studio Code ist Git-Unterstützung bereits integriert.
-Sie müssen dafür Git Version 2.0.0 (oder höher) installiert haben.</p>
+Du musst dafür Git Version 2.0.0 (oder höher) installiert haben.</p>
 </div>
 <div class="paragraph">
 <p>Die Hauptfeatures sind:</p>
@@ -29,23 +29,23 @@ Sie müssen dafür Git Version 2.0.0 (oder höher) installiert haben.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Sehen Sie den Unterschied der Datei, die Sie bearbeiten, in der Seitenleise.</p>
+<p>Schau dir den Unterschied der Datei, die du bearbeitest, in der Seitenleiste an.</p>
 </li>
 <li>
 <p>In der Git-Statusleiste (unten links) werden der aktuelle Branch, die Dirty-Indikatoren sowie eingehende und ausgehende Commits angezeigt.</p>
 </li>
 <li>
-<p>Sie können die gebräuchlichsten Git-Operationen im Editor ausführen:</p>
+<p>Du kannst die gebräuchlichsten Git-Operationen im Editor ausführen:</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Initialisiere ein Repository.</p>
+<p>Initialisieren ein Repository.</p>
 </li>
 <li>
-<p>Klonen Sie ein Repository.</p>
+<p>Klonen eines Repository.</p>
 </li>
 <li>
-<p>Erstellen Sie Branches und Tags.</p>
+<p>Erstellen von Branches und Tags.</p>
 </li>
 <li>
 <p>Änderungen bereitstellen und festschreiben.</p>
@@ -63,12 +63,12 @@ Sie müssen dafür Git Version 2.0.0 (oder höher) installiert haben.</p>
 </div>
 </li>
 <li>
-<p>Mit einer Erweiterung können Sie auch GitHub Pull-Requests bearbeiten:
+<p>Mit einer Erweiterung kannst du auch GitHub Pull-Requests bearbeiten:
   <a href="https://marketplace.visualstudio.com/items?itemName=GitHub.vscode-pull-request-github" class="bare" target="_blank" rel="noopener">https://marketplace.visualstudio.com/items?itemName=GitHub.vscode-pull-request-github</a>.</p>
 </li>
 </ul>
 </div>
 <div class="paragraph">
-<p>Die offizielle Dokumentation finden Sie hier: <a href="https://code.visualstudio.com/Docs/editor/versioncontrol" class="bare" target="_blank" rel="noopener">https://code.visualstudio.com/Docs/editor/versioncontrol</a>.</p>
+<p>Die offizielle Dokumentation findest du hier: <a href="https://code.visualstudio.com/Docs/editor/versioncontrol" class="bare" target="_blank" rel="noopener">https://code.visualstudio.com/Docs/editor/versioncontrol</a>.</p>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
