--- a/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-Zsh.html
+++ b/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-Zsh.html
@@ -22,7 +22,7 @@ url: "/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Git-in-Zsh.html"
 <div class="paragraph">
 <p>
 Zsh wird ebenfalls mit einer Tab-Completion-Bibliothek für Git ausgeliefert.
-Um es zu benutzen, fügen Sie einfach <code>autoload -Uz compinit &amp;&amp; compinit</code> in Ihrer <code>.zshrc</code> Datein ein.
+Um es zu benutzen, füge einfach <code>autoload -Uz compinit &amp;&amp; compinit</code> in deiner <code>.zshrc</code> Datein ein.
 Die Oberfläche von Zsh ist etwas leistungsfähiger als die von Bash:</p>
 </div>
 <div class="listingblock">
@@ -37,12 +37,12 @@ cherry-pick       -- apply changes introduced by some existing commits</code></p
 </div>
 </div>
 <div class="paragraph">
-<p>Mehrdeutige Tab-Vervollständigungen werden nicht nur aufgelistet. Sie haben hilfreiche Beschreibungen und Sie können durch die Liste navigieren, indem Sie wiederholt auf Tab drücken.
+<p>Mehrdeutige Tab-Vervollständigungen werden nicht nur aufgelistet. Sie haben hilfreiche Beschreibungen und du kannst durch die Liste navigieren, indem du wiederholt auf Tab drückst.
 Dies funktioniert mit Git-Befehlen, ihren Argumenten und Namen von Objekten im Repository (wie Refs und Remotes) sowie mit Dateinamen und all den anderen Dingen, die Zsh mit Tabulatoren vervollständigen kann.</p>
 </div>
 <div class="paragraph">
 <p>Zsh wird mit einem Framework zum Abrufen von Informationen von Versionskontrollsystemen namens „vcs_info" ausgeliefert.
-Fügen Sie Ihrer <code>~/.zshrc</code> Datei die folgenden Zeilen hinzu, um den Namen des Branches in die Eingabeaufforderung auf der rechten Seite aufzunehmen:</p>
+Füge deiner <code>~/.zshrc</code> Datei die folgenden Zeilen hinzu, um den Namen des Branches in die Eingabeaufforderung auf der rechten Seite aufzunehmen:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -56,8 +56,8 @@ zstyle ':vcs_info:git:*' formats '%b'</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Dies führt zu einer Anzeige des aktuellen Branches auf der rechten Seite des Terminalfensters, wenn sich Ihre Shell in einem Git-Repository befindet.
-Die linke Seite wird natürlich auch unterstützt; heben Sie einfach die Kommentierung zur PROMPT-Zuweisung auf.
+<p>Dies führt zu einer Anzeige des aktuellen Branches auf der rechten Seite des Terminalfensters, wenn sich deine Shell in einem Git-Repository befindet.
+Die linke Seite wird natürlich auch unterstützt. Entferne einfach die Kommentierung zur PROMPT-Zuweisung.
 Es sieht in etwa so aus:</p>
 </div>
 <div class="imageblock">
@@ -67,10 +67,10 @@ Es sieht in etwa so aus:</p>
 <div class="title">Abbildung 185. Benutzerdefinierter <code>zsh</code> Prompt</div>
 </div>
 <div class="paragraph">
-<p>Weitere Informationen zu <code>vcs_info</code> finden Sie in der Dokumentation in der <code>zshcontrib(1)</code> Manpage oder online unter <a href="https://zsh.sourceforge.net/Doc/Release/User-Contributions.html#Version-Control-Information" class="bare" target="_blank" rel="noopener">https://zsh.sourceforge.net/Doc/Release/User-Contributions.html#Version-Control-Information</a>.</p>
+<p>Weitere Informationen zu <code>vcs_info</code> findest du in der Dokumentation in der <code>zshcontrib(1)</code> Manpage oder online unter <a href="https://zsh.sourceforge.net/Doc/Release/User-Contributions.html#Version-Control-Information" class="bare" target="_blank" rel="noopener">https://zsh.sourceforge.net/Doc/Release/User-Contributions.html#Version-Control-Information</a>.</p>
 </div>
 <div class="paragraph">
-<p>Anstelle von <code>vcs_info</code> bevorzugen Sie möglicherweise das im Lieferumfang von Git enthaltene Skript zur Anpassung der Eingabeaufforderung mit dem Namen <code>git-prompt.sh</code>. Weitere Informationen finden Sie unter <a href="https://github.com/git/git/blob/master/contrib/completion/git-prompt.sh" class="bare" target="_blank" rel="noopener">https://github.com/git/git/blob/master/contrib/completion/git-prompt.sh</a>.
+<p>Anstelle von <code>vcs_info</code> bevorzugst du möglicherweise das im Lieferumfang von Git enthaltene Skript zur Anpassung der Eingabeaufforderung mit dem Namen <code>git-prompt.sh</code>. Weitere Informationen findest du unter <a href="https://github.com/git/git/blob/master/contrib/completion/git-prompt.sh" class="bare" target="_blank" rel="noopener">https://github.com/git/git/blob/master/contrib/completion/git-prompt.sh</a>.
 <code>git-prompt.sh</code> ist sowohl mit Bash als auch mit Zsh kompatibel.</p>
 </div>
 <div class="paragraph">
