--- a/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Grafische-Schnittstellen.html
+++ b/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Grafische-Schnittstellen.html
@@ -18,22 +18,22 @@ book:
 title: Git - Grafische Schnittstellen
 url: "/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Grafische-Schnittstellen.html"
 ---
-<p>Wenn Sie das ganze Buch durchgelesen haben, haben Sie viel darüber gelernt, wie man Git auf der Kommandozeile benutzt.
-Sie können mit lokalen Dateien arbeiten, Ihr Repository über ein Netzwerk mit anderen verbinden und effektiv mit anderen zusammenarbeiten.
-Aber die Geschichte endet nicht dort; Git wird normalerweise als Teil eines größeren Ökosystems verwendet, und die Kommandozeile ist nicht immer die beste Möglichkeit, damit zu arbeiten.
-Jetzt werden wir uns einige der anderen Arten von Umgebungen ansehen, in denen Git nützlich sein kann, und wie andere Anwendungen (einschließlich Ihrer) neben Git funktionieren.</p>
+<p>Wenn du das ganze Buch durchgelesen hast, hast du viel darüber gelernt, wie man Git auf der Kommandozeile benutzt.
+Du kannst mit lokalen Dateien arbeiten, dein Repository über ein Netzwerk mit anderen verbinden und effektiv mit anderen zusammenarbeiten.
+Aber die Geschichte endet hier nicht; Git wird normalerweise als Teil eines größeren Ökosystems verwendet, und die Kommandozeile ist nicht immer die beste Möglichkeit, umd mit Git zu arbeiten.
+Jetzt werden wir uns einige der anderen Arten von Umgebungen ansehen, in denen Git nützlich sein kann, und wie andere Anwendungen (einschließlich Deiner) neben Git funktionieren.</p>
 <h2 id="_grafische_schnittstellen">Grafische Schnittstellen</h2>
 <div class="paragraph">
 <p>
-Die native Umgebung von Git ist das Terminal.
-Dort werden zuerst neue Funktionen implementiert, und nur über die Befehlszeile steht Ihnen die volle Leistung von Git zur Verfügung.
-Die Befehlszeile ist jedoch nicht für alle Aufgaben die beste Wahl. Manchmal benötigen Sie eine visuelle Darstellung, und einige Benutzer sind mit einer grafischen -Oberfläche viel besser vertraut.</p>
+Die native Umgebung von Git ist das Terminal bzw. die Befehlszeile.
+Dort werden zuerst neue Funktionen implementiert, und nur über die Befehlszeile steht dir die volle Leistung von Git zur Verfügung.
+Die Befehlszeile ist jedoch nicht für alle Aufgaben die beste Wahl. Manchmal benötigst du eine visuelle Darstellung, und einige Benutzer sind mit einer grafischen -Oberfläche viel besser vertraut.</p>
 </div>
 <div class="paragraph">
 <p>Es ist wichtig zu beachten, dass unterschiedliche Schnittstellen auf unterschiedliche Workflows zugeschnitten sind.
-Einige Clients stellen nur eine sorgfältig zusammengestellte Teilmenge der Git-Funktionalität zur Verfügung, um eine bestimmte Arbeitsweise zu unterstützen, die der Autor für effektiv hält.
+Einige Clients stellen nur eine sorgfältig ausgewählte Teilmenge der Git-Funktionalität zur Verfügung, um eine bestimmte Arbeitsweise zu unterstützen, die der Client-Ersteller für nützlich hält.
 Mit diesem Hintergrund kann keines dieser Tools als „besser“ bezeichnet werden als die anderen, sie sind einfach besser für den beabsichtigten Zweck geeignet.
-Beachten Sie auch, dass diese grafischen Clients nichts tun können, was der Befehlszeilenclient nicht kann. In der Befehlszeile haben Sie immer noch die größte Leistung und Kontrolle, wenn Sie mit Ihren Repositorys arbeiten.</p>
+Beachte, dass diese grafischen Clients nichts tun können, was der Befehlszeilenclient nicht kann. In der Befehlszeile hast du immer noch die größte Leistung und Kontrolle, wenn du mit deinem Repositorys arbeitest.</p>
 </div>
 <div class="sect3">
 <h3 id="_gitk_und_git_gui">
@@ -41,16 +41,16 @@ Beachten Sie auch, dass diese grafischen Clients nichts tun können, was der Bef
 </h3>
 <div class="paragraph">
 <p>
-Wenn Sie Git installieren, erhalten Sie auch die visuellen Tools <code>gitk</code> und <code>git-gui</code>.</p>
+Wenn du Git installierst, erhältst du auch die grafischen Tools <code>gitk</code> und <code>git-gui</code>.</p>
 </div>
 <div class="paragraph">
 <p><code>gitk</code> ist ein grafischer Verlaufsbetrachter.
-Stellen Sie sich das wie eine leistungsstarke GUI-Shell über <code>git log</code> und <code>git grep</code> vor.
-Dies ist das Tool, welches sie nutzen sollten, wenn sie versuchen, etwas zu finden, das in der Vergangenheit passiert ist oder wenn sie den Verlauf Ihres Projekts visualisieren wollen.</p>
+Du kannst dir das wie eine leistungsstarke GUI-Shell über <code>git log</code> und <code>git grep</code> vorstellen.
+Dies ist das Tool, welches du nutzen solltest, wenn du versuchst, etwas zu finden, das in der Vergangenheit passiert ist oder wenn du den Verlauf deines Projektes visualisieren willst.</p>
 </div>
 <div class="paragraph">
 <p>Gitk lässt sich am einfachsten über die Befehlszeile aufrufen.
-Geben Sie einfach eine CD in ein Git-Repository ein und geben Sie Folgendes ein:</p>
+Gib einfach eine CD in ein Git-Repository ein und führe folgendes Kommando aus:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -71,7 +71,7 @@ Die Benutzeroberfläche von Gitk sieht folgendermaßen aus:</p>
 <div class="paragraph">
 <p>Im oberen Teil sieht man etwas, das ein bisschen wie die Ausgabe von <code>git log --graph</code> aussieht. Jeder Punkt steht für ein Commit, die Linien für übergeordnete Beziehungen und Refs werden als farbige Kästchen angezeigt.
 Der gelbe Punkt steht für HEAD und der rote Punkt für Änderungen, die noch nicht festgeschrieben wurden.
-Unten sehen Sie eine Ansicht des ausgewählten Commits. Die Kommentare und Patches auf der linken Seite und eine zusammenfassende Ansicht auf der rechten Seite.
+Unten siehst du eine Ansicht des ausgewählten Commits. Die Kommentare und Patches auf der linken Seite und eine zusammenfassende Ansicht auf der rechten Seite.
 Dazwischen befindet sich eine Sammlung von Steuerelementen, die zum Durchsuchen des Verlaufs verwendet werden können.</p>
 </div>
 <div class="paragraph">
@@ -94,17 +94,17 @@ Es kann ebenfalls sehr einfach über die Befehlszeile aufgerufen werden:</p>
 </div>
 <div class="paragraph">
 <p>Links ist der Index. „Unstage“ Änderungen befinden sich oben, „staged“ Änderungen unten.
-Sie können ganze Dateien zwischen den beiden Status verschieben, indem Sie auf deren Symbole klicken. Weiterhin können Sie eine Datei zum Anzeigen auswählen, indem Sie auf ihren Namen klicken.</p>
+Du kannst ganze Dateien zwischen den beiden Status verschieben, indem du auf deren Symbole klickst. Weiterhin kannst du eine Datei zum Anzeigen auswählen, indem du auf deinen Namen klickst.</p>
 </div>
 <div class="paragraph">
 <p>Oben rechts befindet sich die Diff-Ansicht, in der die Änderungen für die aktuell ausgewählte Datei angezeigt werden.
-Sie können einzelne Bereiche (oder einzelne Linien) stagen, indem Sie mit der rechten Maustaste in diesen Bereich klicken.</p>
+Du kannst einzelne Bereiche (oder einzelne Linien) stagen, indem du mit der rechten Maustaste in diesen Bereich klickst.</p>
 </div>
 <div class="paragraph">
 <p>Unten rechts befindet sich der Nachrichten- und Aktionsbereich.
-Geben Sie Ihre Nachricht in das Textfeld ein und klicken Sie auf „Commit“, um etwas Ähnliches wie <code>git commit</code> zu tun.
-Sie können das letzte Commit auch ändern, indem Sie das Optionsfeld „Ändern“ aktivieren, um den Bereich „Staged Changes“ mit dem Inhalt des letzten Commits zu aktualisieren.
-Anschließend können Sie einfach einige Änderungen aktivieren oder deaktivieren, die Commit-Nachricht ändern und erneut auf „Commit“ klicken, um den alte commit durch einen neuen zu ersetzen.</p>
+Gib deine Nachricht in das Textfeld ein und klicke auf „Commit“, um etwas Ähnliches wie <code>git commit</code> zu tun.
+Du kanst den letzten Commit auch ändern, indem du das Optionsfeld „Ändern“ aktivierst, um den Bereich „Staged Changes“ mit dem Inhalt des letzten Commits zu aktualisieren.
+Anschließend kannst du einfach einige Änderungen aktivieren oder deaktivieren, die Commit-Nachricht ändern und erneut auf „Commit“ klicken, um den alte commit durch einen neuen zu ersetzen.</p>
 </div>
 <div class="paragraph">
 <p><code>gitk</code> und <code>git-gui</code> sind Beispiele für aufgabenorientierte Tools.
@@ -133,22 +133,22 @@ Sie sehen so aus:</p>
 </div>
 <div class="paragraph">
 <p>Sie sind so konzipiert, dass sie sehr ähnlich aussehen und funktionieren. Daher werden wir sie in diesem Kapitel wie ein einziges Produkt behandeln.
-Wir werden keinen detaillierten Überblick über diese Tools geben (sie haben ihre eigene Dokumentation), aber kurz auf die Ansicht „Änderungen“ (in der Sie die meiste Zeit verbringen werden) werden wir eingehen.</p>
+Wir werden keinen detaillierten Überblick über diese Tools geben (sie haben ihre eigene Dokumentation), aber kurz auf die Ansicht „Änderungen“ (in der du die meiste Zeit verbringen wirst) eingehen.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Auf der linken Seite befindet sich die Liste der Repositorys, die der Client verfolgt. Sie können ein Repository hinzufügen (entweder durch Klonen oder lokales Anhängen), indem Sie oben in diesem Bereich auf das Symbol "+" klicken.</p>
+<p>Auf der linken Seite befindet sich die Liste der Repositorys, die der Client verfolgt. Du kannst ein Repository hinzufügen (entweder durch Klonen oder lokales Anhängen), indem du oben in diesem Bereich auf das Symbol "+" klickst.</p>
 </li>
 <li>
-<p>In der Mitte befindet sich ein Commit-Eingabebereich, in den Sie eine Commit-Nachricht eingeben und auswählen können, welche Dateien enthalten sein sollen.
+<p>In der Mitte befindet sich ein Commit-Eingabebereich, in den du eine Commit-Nachricht eingibst und auswählen kannst, welche Dateien enthalten sein sollen.
    Unter Windows wird die Commit-Historie direkt darunter angezeigt. Unter macOS befindet sie sich auf einer separaten Registerkarte.</p>
 </li>
 <li>
-<p>Auf der rechten Seite befindet sich eine Diff-Ansicht, die zeigt, was in Ihrem Arbeitsverzeichnis geändert wurde oder welche Änderungen im ausgewählten Commit enthalten waren.</p>
+<p>Auf der rechten Seite befindet sich eine Diff-Ansicht, die zeigt, was in deinem Arbeitsverzeichnis geändert wurde oder welche Änderungen im ausgewählten Commit enthalten waren.</p>
 </li>
 <li>
-<p>Zu guter Letzt gibt es oben rechts die Schaltfläche „Synchronisieren“. Hierrüber werden sie primär über das Netzwerk interagieren.</p>
+<p>Zu guter Letzt gibt es oben rechts die Schaltfläche „Synchronisieren“. Damit kannst du mit dem Netzwerk interagieren.</p>
 </li>
 </ul>
 </div>
@@ -160,8 +160,8 @@ Wir werden keinen detaillierten Überblick über diese Tools geben (sie haben ih
 </td>
 <td class="content">
 <div class="paragraph">
-<p>Sie benötigen kein GitHub-Konto, um diese Tools verwenden zu können.
-Das Tool is designed, um Githubs Services und deren empfohlenen Workflow zu nuten, sie können damit jedoch problemlos mit jedem Repository arbeiten und Netzwerkoperationen mit jedem Git-Host ausführen.</p>
+<p>Du benötigst kein GitHub-Konto, um diese Tools verwenden zu können.
+Das Tool is designed, um Githubs Services und deren empfohlenen Workflow zu nuten. Du kannst damit jedoch problemlos mit jedem Repository arbeiten und Netzwerkoperationen mit jedem Git-Host ausführen.</p>
 </div>
 </td>
 </tr>
@@ -171,25 +171,25 @@ Das Tool is designed, um Githubs Services und deren empfohlenen Workflow zu nute
 <h4 id="_installation_2">Installation</h4>
 <div class="paragraph">
 <p>GitHub für Windows kann von <a href="https://windows.github.com" class="bare" target="_blank" rel="noopener">https://windows.github.com</a> und GitHub für macOS von <a href="https://mac.github.com" class="bare" target="_blank" rel="noopener">https://mac.github.com</a> heruntergeladen werden.
-Wenn die Anwendungen zum ersten Mal ausgeführt werden, werden Sie durch alle erstmaligen Git-Einstellungen geführt, z. B. durch die Konfiguration Ihres Namens und Ihrer E-Mail-Adresse. Beide richten vernünftige Standardeinstellungen für viele gängige Konfigurationsoptionen ein, z. B. Caches für Anmeldeinformationen und CRLF-Verhalten.</p>
+Wenn die Anwendungen zum ersten Mal ausgeführt werden, wirst du durch alle erstmaligen Git-Einstellungen geführt, z. B. durch die Konfiguration deines Namens und deiner E-Mail-Adresse. Beide richten vernünftige Standardeinstellungen für viele gängige Konfigurationsoptionen ein, z. B. Caches für Anmeldeinformationen und CRLF-Verhalten.</p>
 </div>
 <div class="paragraph">
 <p>Beides sind „Evergreen“-Programme – Alle Updates werden automatisch heruntergeladen und im Hintergrund installiert, sobald die Anwendungen geöffnet sind.
-Dies beinhaltet eine gebündelte Version von Git, was bedeutet, dass Sie sich wahrscheinlich nicht darum kümmern müssen, sie manuell erneut zu aktualisieren.
-Unter Windows enthält der Client eine Verknüpfung zum Starten von PowerShell mit Posh-git, auf die wir später in diesem Kapitel näher eingehen werden.</p>
+Dies beinhaltet eine gebündelte Version von Git, was bedeutet, dass du dich wahrscheinlich nicht darum kümmern musst, sie manuell zu aktualisieren.
+Unter Windows enthält der Client eine Verknüpfung zum Starten von PowerShell mit Posh-git, auf das wir später in diesem Kapitel näher eingehen werden.</p>
 </div>
 <div class="paragraph">
 <p>Der nächste Schritt besteht darin, dem Tool einige Repositorys zur Verfügung zu stellen, mit denen es arbeiten kann.
-Der Client zeigt Ihnen eine Liste der Repositorys, auf die Sie auf GitHub zugreifen können, und kann sie in einem Schritt klonen.
-Wenn Sie bereits über ein lokales Repository verfügen, ziehen Sie dessen Verzeichnis einfach aus dem Finder oder Windows Explorer in das GitHub-Clientfenster. Es wird dann in die Liste der Repositorys auf der linken Seite aufgenommen.</p>
+Der Client zeigt dir eine Liste der Repositorys, auf die du auf GitHub zugreifen kannst, und kann sie in einem Schritt klonen.
+Wenn du bereits über ein lokales Repository verfügst, ziehst du das Verzeichnis einfach aus dem Finder oder Windows Explorer in das GitHub-Clientfenster. Es wird dann in die Liste der Repositorys auf der linken Seite aufgenommen.</p>
 </div>
 </div>
 <div class="sect4">
 <h4 id="_empfohlener_workflow">Empfohlener Workflow</h4>
 <div class="paragraph">
-<p>Sobald es installiert und konfiguriert ist, können Sie den GitHub-Client für viele gängige Git-Aufgaben verwenden.
-Der beabsichtigte Workflow für dieses Tool wird manchmal als „GitHub Flow“ bezeichnet.
-Wir behandeln dies ausführlicher in <a href="{{< relurl "book/de/v2/ch00/ch06-github_flow" >}}">Der GitHub Workflow</a>, aber der Kern des Ganzen ist, dass (a) Sie sich auf einen Branch festlegen und (b) sich mit einer remote Repository regelmäßig synchronisieren.</p>
+<p>Sobald es installiert und konfiguriert ist, kannst du den GitHub-Client für viele gängige Git-Aufgaben verwenden.
+Der vorgegebene Workflow für dieses Tool wird manchmal als „GitHub Flow“ bezeichnet.
+Wir behandeln dies ausführlicher in <a href="{{< relurl "book/de/v2/ch00/ch06-github_flow" >}}">Der GitHub Workflow</a>, aber der Kern des Ganzen ist, dass (a) du dich auf einen Branch festlegst und (b) dich mit einer remote Repository regelmäßig synchronisierst.</p>
 </div>
 <div class="paragraph">
 <p>Das Branchmanagement ist einer der Bereiche, in denen sich die beiden Tools unterscheiden.
@@ -211,14 +211,14 @@ Unter macOS gibt es oben im Fenster eine Schaltfläche zum Erstellen eines neuen
 <div class="title">Abbildung 182. Einen Branch auf Windows erstellen</div>
 </div>
 <div class="paragraph">
-<p>Sobald Ihre Branch erstellt ist, ist das Erstellen neuer Commits ziemlich einfach.
-Nehmen Sie einige Änderungen in Ihrem Arbeitsverzeichnis vor. Wenn Sie zum GitHub-Client-Fenster wechseln, wird angezeigt, welche Dateien geändert wurden.
-Geben Sie eine Commitnachricht ein, wählen Sie die Dateien aus, die Sie einschließen möchten, und klicken Sie auf die Schaltfläche „Commit“ (Strg-Eingabe oder ⌘-Eingabe).</p>
+<p>Sobald dein Branch erstellt ist, ist das Erstellen neuer Commits ziemlich einfach.
+Nimm einige Änderungen in deinem Arbeitsverzeichnis vor. Wenn du zum GitHub-Client-Fenster wechselst, wird angezeigt, welche Dateien geändert wurden.
+Gib eine Commitnachricht ein, wähle die Dateien aus, die du einschließen möchtest, und klicke auf die Schaltfläche „Commit“ (Strg-Eingabe oder ⌘-Eingabe).</p>
 </div>
 <div class="paragraph">
-<p>Die Hauptmethode für die Interaktion mit anderen Repositorys über das Netzwerk ist die Funktion „Synchronisieren“.
+<p>Die Funktion für die Interaktion mit anderen Repositorys über das Netzwerk ist „Synchronisieren“.
 Git verfügt intern über separate Vorgänge zum Verschieben, Abrufen, Zusammenführen und Rebasen. Die GitHub-Clients reduzieren jedoch alle diese Vorgänge zu einer mehrstufigen Funktion.
-Folgendes passiert, wenn Sie auf die Schaltfläche „Synchronisieren“ klicken:</p>
+Folgendes passiert, wenn du auf die Schaltfläche „Synchronisieren“ klickst:</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
@@ -232,15 +232,15 @@ Wenn das wegen eines merge Konfliktes fehlschlägt, gehe zurück zu <code>git pu
 </ol>
 </div>
 <div class="paragraph">
-<p>Dies ist die häufigste Folge von Netzwerkbefehlen, wenn Sie auf diese Art arbeiten. Wenn Sie sie also zu einem Befehl zusammenfassen, sparen Sie viel Zeit.</p>
+<p>Dies ist die häufigste Sequenz von Netzwerkbefehlen, wenn du damit arbeitest. Wenn du sie also zu einem Befehl zusammenfasst, sparst du eine Menge Zeit.</p>
 </div>
 </div>
 <div class="sect4">
 <h4 id="_zusammenfassung_15">Zusammenfassung</h4>
 <div class="paragraph">
 <p>Diese Tools eignen sich sehr gut für den Workflow, für den sie entwickelt wurden.
-Entwickler und Nichtentwickler können innerhalb von Minuten an einem Projekt zusammenarbeiten, und viele der Best Practices für diese Art von Workflow sind in die Tools integriert.
-Wenn Ihr Workflow jedoch anders ist oder Sie mehr Kontrolle darüber haben möchten, wie und wann Netzwerkvorgänge ausgeführt werden, empfehlen wir Ihnen, einen anderen Client oder die Befehlszeile zu verwenden.</p>
+Entwickler und Nichtentwickler können innerhalb von Minuten an einem Projekt zusammenarbeiten. Viele Best Practices für diese Art von Workflow sind in die Tools integriert.
+Wenn dein Workflow jedoch anders ist oder du mehr Kontrolle darüber haben möchtest, wie und wann Netzwerkvorgänge ausgeführt werden, empfehlen wir dir, einen anderen Client oder die Befehlszeile zu verwenden.</p>
 </div>
 </div>
 </div>
@@ -249,7 +249,7 @@ Wenn Ihr Workflow jedoch anders ist oder Sie mehr Kontrolle darüber haben möch
 <div class="paragraph">
 <p>Es gibt eine Reihe anderer grafischer Git-Clients, die von spezialisierten Einzweck-Tools bis hin zu Apps reichen, die versuchen, alles zu beinhalten, was Git kann.
 Die offizielle Git-Website enthält eine kuratierte Liste der beliebtesten Clients unter <a href="https://git-scm.com/downloads/guis" class="bare" target="_blank" rel="noopener">https://git-scm.com/downloads/guis</a>.
-Eine umfassendere Liste finden Sie auf der Git-Wiki-Website unter <a href="https://git.wiki.kernel.org/index.php/Interfaces,_frontends,_and_tools#Graphical_Interfaces" class="bare" target="_blank" rel="noopener">https://git.wiki.kernel.org/index.php/Interfaces,_frontends,_and_tools#Graphical_Interfaces</a>.</p>
+Eine umfassendere Liste findest du auf der Git-Wiki-Website unter <a href="https://git.wiki.kernel.org/index.php/Interfaces,_frontends,_and_tools#Graphical_Interfaces" class="bare" target="_blank" rel="noopener">https://git.wiki.kernel.org/index.php/Interfaces,_frontends,_and_tools#Graphical_Interfaces</a>.</p>
 </div>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
