--- a/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Zusammenfassung.html
+++ b/external/book/content/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Zusammenfassung.html
@@ -20,6 +20,6 @@ url: "/book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Zusammenfassung.html"
 ---
 <h2 id="_zusammenfassung_16">Zusammenfassung</h2>
 <div class="paragraph">
-<p>Sie haben gelernt, wie Sie Gits Leistungsfähigkeit in den Tools nutzen, die Sie während Ihrer täglichen Arbeit verwenden, und wie Sie aus Ihren eigenen Programmen auf Git-Repositorys zugreifen können.</p>
+<p>Du hast gelernt, wie du Gits Leistungsfähigkeit in den Tools nutzt, welches du während deiner täglichen Arbeit verwendest, und wie du aus deinen eigenen Programmen auf Git-Repositorys zugreifen kannst.</p>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
